# ffmpeg_build

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  init.sh  main.cpp  subtree.sh  update_pc.sh
